wording and portfolio update

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <hr class="hr-dark wow zoomIn" data-wow-delay="0.2s">
                 <div class="aboutright-inner text-center">
 				  	<div class="clearfix wow fadeInUp" data-wow-delay="0.3s">
-						<span>An Open-minded Creator and Listener</span>
+						<span>An Open-minded Problem Solver</span>
 						<p>I put efforts in studying user, creating solutions to tackle the real people problem and validating the effectiveness of the solutions through fast iterations of prototyping, testing and optimization. As a detail oriented person, I demonstrate front end products that express creative design language with clean and reusable code.</p>
 					</div>
 				</div>
@@ -320,6 +320,30 @@
               <p class="wow animated fadeInUp-light">Outcome Snaps</p>
               <div class="row text-center" id="portfolio1">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
+                	<h3><strong>Arduino(C/C++), Python, AWS</strong></h3>
+                    <p>My team is building a automated retail shelf monitoring system that offers accurate item identification and pickup/dropoff detection at a relatively low cost.</p>
+                    <a class="btn btn1 btn2" href="https://docs.google.com/presentation/d/1g1WeUmCRD7PegR4xy27UDF3vAITgPpR0EJBYLa_f1eU/edit#slide=id.g46f313d5d6_0_10" target="_blank">Project Presentation *</a>
+                    <div class="btn-note">* Please contact me for permission.</div>
+                </div>
+                <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
+                	<img class="pimg-code" src="imgs/portfolio/crypto-code.png" alt="Loading Moviemotion...">
+                    <img class="pimg" src="imgs/portfolio/shelfmon.png" alt="Loading Moviemotion...">
+                </div>
+              </div>
+              <div class="row text-center" id="portfolio2">
+                <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
+                	<img class="pimg-code" src="imgs/portfolio/crypto-code.png" alt="Loading Milu...">
+                	<img class="pimg" src="imgs/portfolio/milu.png" alt="Loading Milu...">
+                </div>
+                <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
+                	<h3><strong>JavaScript, Google Vision API</strong></h3>
+                    <p>Milu - A gallery search engine built to enable image content search.</p>
+                    <a class="btn btn1 btn2" href="https://docs.google.com/presentation/d/1Ri520Vwu6EXq8hyOrBHY_iSTnHTL9SjH4pMnIDzkbCQ/edit#slide=id.g3c72cedcb9_0_269" target="_blank">Project Presentation *</a>
+                    <div class="btn-note">* Please contact me for permission.</div>
+                </div>
+              </div>
+              <div class="row text-center" id="portfolio3">
+                <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Chrome Extension, Solidity</strong></h3>
                     <p>Ethereum Wallet - A Chrome Extension which enables Ethereum trade. Our team focuses on both the implementation and the security analysis to ensure the reliability and usability of our Chrome extension and our smart contract.</p>
                     <a class="btn btn1 btn2" href="https://docs.google.com/document/d/1eHWPxfec-hE_fyODqD-RaNdRljBPrH-SiIz8F6tzewg/edit?usp=sharing" target="_blank">Research Paper *</a>
@@ -330,7 +354,7 @@
                     <img class="pimg" src="imgs/portfolio/crypto0.png" alt="Loading Moviemotion...">
                 </div>
               </div>
-              <div class="row text-center" id="portfolio2">
+              <div class="row text-center" id="portfolio4">
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
                 	<img class="pimg-code" src="imgs/portfolio/cmuwf-code.png" alt="Loading Casey...">
                 	<img class="pimg" src="imgs/portfolio/cmuwf.png" alt="Loading Casey...">
@@ -342,18 +366,29 @@
                     <div class="btn-note">* Please contact me for permission.</div>
                 </div>
               </div>
-              <div class="row text-center" id="portfolio3">
+              <div class="row text-center" id="portfolio5">
+                <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
+                	<h3><strong>Microsoft HoloLens, Unity, C#, JavaScript</strong></h3>
+                    <p>Intelligent Tutoring Systems - A research project aiming to build an AR application on Microsoft HoloLens that enhances in-class communication to help instructors conduct efficient teaching.</p>
+                    <a class="btn btn1 btn2" href="./subpages/dashboard.html">Read More</a>
+                </div>
+                <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
+                	<img class="pimg-code" src="imgs/portfolio/hololens.jpg" alt="Loading HoloLens...">
+                    <img class="pimg" src="imgs/portfolio/hololens1.gif" alt="Loading HoloLens...">
+                </div>
+              </div>
+              <!-- <div class="row text-center" id="portfolio5">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>JavaScript, Python, R, PyTorch</strong></h3>
                     <p>Movie.Emodex - A research project where we explore new application in movie sentiment analysis with the help of deep learning and data visualization methods through web interface.</p>
-                    <!-- <button class="btn btn1 btn2" href="" disabled>Coming Soon...</button> -->
+                    <button class="btn btn1 btn2" href="" disabled>Coming Soon...</button>
                 </div>
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
                 	<img class="pimg-code" src="imgs/portfolio/moviemotion-code.png" alt="Loading Moviemotion...">
                     <img class="pimg" src="imgs/portfolio/moviemotion0.png" alt="Loading Moviemotion...">
                 </div>
-              </div>
-              <div class="row text-center" id="portfolio4">
+              </div> -->
+              <div class="row text-center" id="portfolio6">
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
                 	<img class="pimg-code" src="imgs/portfolio/casey-code.png" alt="Loading Casey...">
                 	<img class="pimg" src="imgs/portfolio/casey0.png" alt="Loading Casey...">
@@ -364,15 +399,15 @@
                     <!-- <a class="btn btn1 btn2" href="" disabled>Coming Soon...</a> -->
                 </div>
               </div>
-              <div class="row text-center" id="portfolio5">
+              <div class="row text-center" id="portfolio7">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
-                	<h3><strong>Microsoft HoloLens, Unity, C#, JavaScript</strong></h3>
-                    <p>Intelligent Tutoring Systems - A research project aiming to build an AR application on Microsoft HoloLens that enhances in-class communication to help instructors conduct efficient teaching.</p>
-                    <a class="btn btn1 btn2" href="./subpages/dashboard.html">Read More</a>
+                	<h3><strong>Java, PHP, SQL, Android API</strong></h3>
+                    <p>Panther Read - a mobile learning app being built to enter the XPrice competition to improve adult literacy. Our group of software engineers are working closely with psychologists and linguists at PITT to create an efficient and incentivized learning process.</p>
+                    <a class="btn btn1 btn2" href="https://drive.google.com/open?id=0B1dSWHM51dn-T2k0MmxOQ2FJeEE" target="_blank">Research & Design</a>
                 </div>
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
-                	<img class="pimg-code" src="imgs/portfolio/hololens.jpg" alt="Loading HoloLens...">
-                    <img class="pimg" src="imgs/portfolio/hololens1.gif" alt="Loading HoloLens...">
+                	<img class="pimg-code" src="imgs/portfolio/xprice-code.png" alt="Loading Panther Read...">
+                    <img class="pimg" src="imgs/portfolio/xprice1.png" alt="Loading Panther Read...">
                 </div>
               </div>
               <!-- <div class="row text-center" id="portfolio6">
