add porfolio links; add subpage milu

--- a/index.html
+++ b/index.html
@@ -322,8 +322,8 @@
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Arduino(C/C++), Python, AWS</strong></h3>
                     <p>My team is building a automated retail shelf monitoring system that offers accurate item identification and pickup/dropoff detection at a relatively low cost.</p>
-                    <a class="btn btn1 btn2" href="https://docs.google.com/presentation/d/1g1WeUmCRD7PegR4xy27UDF3vAITgPpR0EJBYLa_f1eU/edit#slide=id.g46f313d5d6_0_10" target="_blank">Project Presentation *</a>
-                    <div class="btn-note">* Please contact me for permission.</div>
+                    <a class="btn btn1 btn2" href="https://drive.google.com/open?id=1K9gYgjrOm3o2N2-gLxxWddza4rjLI-OB" target="_blank">Project Presentation</a>
+                    <!-- <div class="btn-note">* Please contact me for permission.</div> -->
                 </div>
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
                 	<img class="pimg-code" src="imgs/portfolio/crypto-code.png" alt="Loading Moviemotion...">
@@ -337,9 +337,9 @@
                 </div>
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>JavaScript, Google Vision API</strong></h3>
-                    <p>Milu - A gallery search engine built to enable image content search.</p>
-                    <a class="btn btn1 btn2" href="https://docs.google.com/presentation/d/1Ri520Vwu6EXq8hyOrBHY_iSTnHTL9SjH4pMnIDzkbCQ/edit#slide=id.g3c72cedcb9_0_269" target="_blank">Project Presentation *</a>
-                    <div class="btn-note">* Please contact me for permission.</div>
+                    <p>Milu - A gallery search engine built to enable image content search in your favorite gallery in any device.</p>
+                    <a class="btn btn1 btn2" href="https://drive.google.com/open?id=1hSjVLe5A58svYf0YPU3LZ8-fYeBPyauG" target="_blank">Project Presentation</a>
+                    <!-- <div class="btn-note">* Please contact me for permission.</div> -->
                 </div>
               </div>
               <div class="row text-center" id="portfolio3">
