sec1 text change

--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
         	<img id="chu-logo" src="imgs/icons/chu-logo.png" alt="Loading Logo...">
             <div id="hand"><img src="imgs/icons/hand.png" alt="Loading hand..."></div>
             <img id="smile3" src="imgs/icons/smile.png" alt="Loading smile...">
-            <p id="sec1-p">I'M A <span class="sec1-p-span" id="coe" data-toggle="tooltip" data-placement="bottom" title="A new journey is about to start...">Designer + Engineer&nbsp;</span>
-                FROM<span class="sec1-p-span" id="uiux" data-toggle="tooltip" data-placement="bottom" title="@ Mountain View, CA">&nbsp;CMU</span></p>
+            <p id="sec1-p">I'M A <span class="sec1-p-span" id="coe" data-toggle="tooltip" data-placement="bottom" title="&#8675&#8675 Scroll down &#8675&#8675">Designer + Engineer&nbsp;</span>
+                AT<span class="sec1-p-span" id="uiux" data-toggle="tooltip" data-placement="bottom" title="@ Mountain View, CA">&nbsp;Indeed.com</span></p>
         </div>
         <div class="arrow_box"></div>
     </section>
