style biug fix: nav

--- a/index.html
+++ b/index.html
@@ -54,14 +54,16 @@
     <div class="sec1nav">
         <ul class="nav-ul">
         	<li class="sec1nav-brand">
-            	<a href="#pageTop" class="local-scroll"><div class="steady">T</div><div class="zoom">im&nbsp;</div><div class="steady">C</div><div class="zoom">hu</div><br/><hr></a>
+            	<a href="#pageTop" class="local-scroll">
+                <div class="steady">T</div><div class="zoom">im&nbsp;</div><div class="steady">C</div><div class="zoom">hu</div><br/><hr>
+                <div class="dd"><i class="fa fa-angle-up" aria-hidden="true" style="margin-right:10px"></i>Top</div>
+              </a>
             </li>
         	<li class="nav-img-wrapper"><a href="#chu-menu">
             	<img class="nav-img nav-img1" id="chu-menu" src="imgs/icons/chu-menu.png" alt="Loading menu...">
         		<img class="nav-img nav-img2" src="imgs/icons/arrow01.png" alt="Loading menu...">
             </a></li>
         </ul>
-        <div class="dd"><i class="fa fa-angle-up" aria-hidden="true" style="margin-right:10px"></i>Top</div>
     </div>
     
     <!-- Sidebar -->
