--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="tianxin, chu, portfolio, single page, one page, interactive, creative, html5, css3, css3 animation, jquery">
     <meta name="author" content="Tianxin Chu">
     <title>Tim Chu's Homepage</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="stylesheet">
     <link rel="icon" href="%PUBLIC_URL%/imgs/icons/icon.png">
     <!--
       manifest.json provides metadata used when your web app is added to the
