--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Tianxin Chu">
     <title>Tim Chu's Homepage</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&display=swap" rel="stylesheet">
-    <link rel="icon" href="%PUBLIC_URL%/imgs/icons/icon.png">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
